# lightweight-charts

./: .dockerignore  .gitignore  DEEP_TECHNICAL_ANALYSIS.md  Dockerfile  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  README.md  ROADMAP.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml  PUBLISH.md  README.md
backend/src/: auth.rs  db.rs  main.rs  metrics.rs  middleware.rs
backend/src/backtest/: engine.rs  executor.rs  metrics.rs  mod.rs  strategy.rs  types.rs
backend/src/channels/: mod.rs
backend/src/indicator/: ast.rs  compiler.rs  dsl.rs  engine.rs  mod.rs  ops.rs  state.rs
backend/src/models/: binance.rs  candle.rs  indicators.rs  mod.rs  orders.rs
backend/src/optimizer/: evolution.rs  fitness.rs  genome.rs  mod.rs  population.rs  runner.rs
backend/src/routes/: auth.rs  health.rs  market.rs  mod.rs  trading.rs
backend/src/services/: data_service.rs  mod.rs
backend/src/trading/: backtest.rs  engine.rs  mod.rs  signals.rs  strategy.rs
backend/src/utils/: mod.rs
backend/src/ws/: binance_listener.rs  circuit_breaker.rs  handler.rs  mod.rs
backend/tests/: integration_tests.rs  load_test.js  load_test_runner.js
docs/: HFT_UPGRADE.md  INTEGRATION_COMPLETE.md  PRESENTATION.md  TECHNICAL_DEEP_DIVE.md  TRADING_EXAMPLES.md  TRADING_INTEGRATION_COMPLETE.md  TRADING_SYSTEM.md  VERIFICATION.md
frontend/: .gitignore  ARCHITECTURE.md  BUILD_COMPLETE.md  COMPLETION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  app.js  index.html  package-lock.json  package.json  setup.bat  setup.sh
frontend/src/: App.jsx
frontend/src/components/: ChartPanel.jsx  DrawingOverlay.jsx  MarketDepth.jsx  OrderPanel.jsx  PortfolioStatsPanel.jsx  PositionsPanel.jsx  ReplayChart.jsx  SignalsPanel.jsx  StrategyPanel.jsx  SymbolSelector.jsx  TradesPanel.jsx
frontend/src/services/: api.js
frontend/src/styles/: App.css  ChartPanel.css  MarketDepth.css  OrderPanel.css  PortfolioStatsPanel.css  SignalsPanel.css  StrategyPanel.css  SymbolSelector.css  TradesPanel.css  index.css
k8s/: deployment.yaml  ingress.yaml
monitoring/: alerts.yaml  dashboard.json  docker-compose.yml  prometheus.yml
plugins/: .gitignore
plugins/backtest/: Cargo.toml  README.md
plugins/backtest/src/: lib.rs
plugins/indicators/: Cargo.toml  README.md
plugins/indicators/src/: lib.rs
plugins/signals/: Cargo.toml  README.md
plugins/signals/src/: lib.rs
plugins/strategy/: Cargo.toml  README.md
plugins/strategy/src/: lib.rs
