[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
futures = "0.3"
tokio-tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
tokio-stream = "0.1"
dashmap = "5.5"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
parking_lot = "0.12"
once_cell = "1.19"
smallvec = "1.11"