[package]
name = "lightweight-charts-backend"
version = "0.1.0"
edition = "2021"
description = "High-performance trading backend with Lightweight Charts integration, real-time Binance data, signal generation, strategy management, and backtesting engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/neopilotai/lightweight-charts"
keywords = ["trading", "binance", "charts", "backtesting", "signals"]
categories = ["finance", "web-services"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
futures = "0.3"
tokio-tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
tokio-stream = "0.1"
dashmap = "5.5"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
parking_lot = "0.12"
once_cell = "1.19"
smallvec = "1.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"