[package]
name = "lightweight-charts-backtest"
version = "0.1.0"
edition = "2021"
description = "Historical backtesting engine for trading strategies"
license = "MIT"
repository = "https://github.com/neopilotai/lightweight-charts"
keywords = ["trading", "backtesting", "strategy"]
categories = ["finance"]

[dependencies]
serde = { version = "1", features = ["derive"] }
lightweight-charts-strategy = { path = "../strategy" }
chrono = "0.4"