[package]
name = "lightweight-charts-indicators"
version = "0.1.0"
edition = "2021"
description = "Technical indicators for trading - RSI, MACD, EMA, SMA"
license = "MIT"
repository = "https://github.com/neopilotai/lightweight-charts"
keywords = ["trading", "indicators", "rsi", "macd", "ema"]
categories = ["finance"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0"