[package]
name = "lightweight-charts-signals"
version = "0.1.0"
edition = "2021"
description = "Trading signal generation from multiple indicators"
license = "MIT"
repository = "https://github.com/neopilotai/lightweight-charts"
keywords = ["trading", "signals", "buy", "sell"]
categories = ["finance"]

[dependencies]
serde = { version = "1", features = ["derive"] }
lightweight-charts-indicators = { path = "../indicators" }
chrono = "0.4"