[package]
name = "lightweight-charts-strategy"
version = "0.1.0"
edition = "2021"
description = "Trading strategy management and execution"
license = "MIT"
repository = "https://github.com/neopilotai/lightweight-charts"
keywords = ["trading", "strategy", "execution"]
categories = ["finance"]

[dependencies]
serde = { version = "1", features = ["derive"] }
lightweight-charts-signals = { path = "../signals" }
chrono = "0.4"